[project]
name = "pytm"
version = "1.4.0"
description = "A Pythonic framework for threat modeling"
authors = [{ name = "pytm Team", email = "please_use_github_issues@nowhere.com" }]
license = "MIT"
requires-python = ">=3.11,<3.15"
readme = "README.md"
packages = [{include = "pytm"}]
include = [
    "pytm/images/*.png",
    "pytm/threatlib/threats.json",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Natural Language :: English",
]
dependencies = [
    "pydantic>=2.10.0,<3.0.0",
]


[dependency-groups]
dev = [
    "pytest>=8.3.5,<9.0.0",
    "black>=25.9.0,<26.0.0",
    "pdoc3>=0.11.6,<0.12.0",
    "ruff>=0.15.11,<0.16.0",
]

[project.urls]
homepage = "https://github.com/OWASP/pytm"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — black handles line length for reformattable code
    "UP007", # Union[X, Y] -> X | Y syntax requires Python 3.10+ at runtime
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
