[tool.poetry]
name = "pytm"
version = "1.3.1"
description = "A Pythonic framework for threat modeling"
authors = ["pytm Team <please_use_github_issues@nowhere.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/OWASP/pytm"
packages = [{include = "pytm"}]
include = [
    "pytm/images/*.png",
    "pytm/threatlib/threats.json",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Natural Language :: English",
]

[tool.poetry.dependencies]
python = "^3.9 || ^3.10 || ^3.11 || ^3.12 || ^3.13 || ^3.14"
pydantic = "^2.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.9.0"
pdoc3 = "^0.11.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
