[tool.poetry]
name = "pytm"
version = "1.4.0"
description = "A Pythonic framework for threat modeling"
authors = ["pytm Team <please_use_github_issues@nowhere.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/OWASP/pytm"
packages = [{include = "pytm"}]
include = [
    "pytm/images/*.png",
    "pytm/threatlib/threats.json",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Natural Language :: English",
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.9.0"
pdoc3 = "^0.11.6"
ruff = "^0.15.11"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — black handles line length for reformattable code
    "UP007", # Union[X, Y] -> X | Y syntax requires Python 3.10+ at runtime
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
